--- a/Flow/_config.yml
+++ b/Flow/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Flow
+title: F l o w . . .
 subtitle: ''
 description: ''
 keywords:
@@ -97,7 +97,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: hexo-theme-melody
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
